@@ -612,21 +612,15 @@ email address to them, and it can be used to send you a new password if you forg
 Check your spelling, or use the form below to create a new user account.",
 'nosuchusershort'	=> "There is no user by the name \"$1\". Check your spelling.",
 'wrongpassword'		=> 'The password you entered is incorrect (or missing). Please try again.',
-'mailmypassword' 	=> 'Mail me a temporary password',
-'mailmypasswordauthent'	=> 'Mail me a temporary password',
-'passwordremindermailsubject' => "Email address authentication and temporary login password from {{SITENAME}}",
-'passwordremindermailbody' 	=> "Someone, probably you from IP address $1,
-requested that we send you a temporary one-time login password for {{SITENAME}}.
-
-This mail is also be sent for the purpose of authentication of your email address.
-The password for user \"$2\" is now \"$4\".
-
-You can now log in with this temporary password, which is valid for only one login.
-You may wish to keep using your old password if you remember it or to set a new one.
-
-{{SERVER}}{{localurl:Special:Userlogin|wpName=$3&wpPassword=$4&returnto=Special:Preferences}}",
+'mailmypassword' 	=> 'Mail me a new password',
+'passwordremindertitle' => "Password reminder from {{SITENAME}}",
+'passwordremindertext' => "Someone (probably you, from IP address $1)
+requested that we send you a new {{SITENAME}} login password.
+The password for user \"$2\" is now \"$3\".
+You should log in and change your password now.",
 'noemail'		            => "There is no e-mail address recorded for user \"$1\".",
-'passwordsent'		        => "A temporary password has been sent to the e-mail address registered for \"$1\".
+'passwordsent'	=> "A new password has been sent to the e-mail address
+registered for \"$1\".
 Please log in again after you receive it.",
 'eauthentsent'             =>  "A confirmation email has been sent to the nominated email address. 
 Before any other mail is sent to the account, you will have to follow the instructions in the email, 
